fixes #404 and resolves other z-index issues with mobile menu

--- a/docs/theme/static/styles/_misc_sitewide.less
+++ b/docs/theme/static/styles/_misc_sitewide.less
@@ -43,7 +43,7 @@
 	left: 0;
 	right: 0;
 	background-color: rgba( 0, 0, 0, 0.5 );
-	z-index: 3;
+	z-index: 1077;
 }
 hr  {
 	margin: 40px 0;
